[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/MoreButtonCollumnArea.gd" type="Script" id=1]
[ext_resource path="res://Inkscape/SpecialButtoning.svg" type="Texture2D" id=2]
[ext_resource path="res://Inkscape/HoverLightImage.svg" type="Texture2D" id=3]
[ext_resource path="res://Sprites/SettingIcon.png" type="Texture2D" id=4]
[ext_resource path="res://fonts/Built/Ubuntu_M_28tred.tres" type="FontFile" id=5]


[sub_resource type="Animation" id=1]
resource_name = "BeingDehovered"
tracks/0/type = "value"
tracks/0/path = NodePath("Button/HoverLights:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "BeingHovered"
tracks/0/type = "value"
tracks/0/path = NodePath("Button/HoverLights:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "InitMoreButton"
tracks/0/type = "value"
tracks/0/path = NodePath("Button/HoverLights:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="MoreButtonCollumnArea" type="CenterContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -75.0
offset_bottom = 75.0
custom_minimum_size = Vector2( 300, 200 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
callTheFunction = "GoToNextMenuOf"

[node name="Button" type="Button" parent="."]
offset_left = 835.0
offset_top = 25.0
offset_right = 1085.0
offset_bottom = 175.0
custom_minimum_size = Vector2( 250, 150 )
tooltip_text = "Insert Tooltip!"

[node name="BackgroundPanel" type="NinePatchRect" parent="Button"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
region_rect = Rect2( -0.076931, -0.225245, 128.252, 128.241 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 8

[node name="HoverLights" type="TextureRect" parent="Button"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
offset_left = 9.0
offset_top = 5.0
offset_right = 242.0
offset_bottom = 144.0

[node name="Icon" type="TextureRect" parent="Button/VBoxContainer"]
offset_right = 233.0
offset_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Button/VBoxContainer"]
offset_top = 106.0
offset_right = 233.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource( 5 )
text = "Label"
align = 1
valign = 1
autowrap = true

[node name="MoreButtonAnimationing" type="AnimationPlayer" parent="."]
autoplay = "InitMoreButton"
anims/BeingDehovered = SubResource( 1 )
anims/BeingHovered = SubResource( 2 )
anims/InitMoreButton = SubResource( 3 )
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
